# HopeGait-FoG_Detection_via_IMU_and_ML

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements-edge.txt  requirements.txt
.github/workflows/: ci.yml  hopegait_agent.yml  train.yml
agent/: README.md  hopegait_agent.py  requirements.txt  synth_signal.py
config/: training_config.yaml
scripts/: launch_cloud.sh  smoke_train.py
src/: config.py  main.py
src/data_pipeline/: dataset.py  dsp.py  preprocess.py
src/edge_conversion/: quantize_model.py
src/inference/: postprocess.py
src/models/: focal_loss.py  tcn_model.py
src/training/: ema.py  evaluate.py  train.py
tests/: conftest.py  test_agent_schema.py  test_dataset.py  test_dsp.py  test_edge_conversion.py  test_edge_conversion_e2e.py  test_focal_loss.py  test_postprocess.py  test_tcn_causality.py
