[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hopegait"
version = "0.1.0"
description = "Real-time Freezing of Gait detection from wearable IMU using a causal TCN, targeting edge deployment on microcontrollers."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
